# ai-real-estate-assistant-dev

./: Makefile  README.md  package-lock.json  playwright.config.ts
apps/: index.py  pyproject.toml  requirements.txt
apps/agents/: classification_metrics.py  hybrid_agent.py  llm_classifier.py  query_analyzer.py
apps/ai/: agent.py  app_services.py  context_manager.py  context_metrics.py  memory.py
apps/alembic/: seed.py
apps/analytics/: cma_adjustments.py
apps/api/: dependencies.py  main.py  models.py  sentry_init.py  test_admin_dashboard.py  test_api_admin.py  test_health.py  test_k8s_health_endpoints.py  test_user_activity.py
apps/api/middleware/: rate_limit.py
apps/api/routers/: admin.py  anomalies.py  auth_jwt.py  bulk_jobs.py  chat.py  cma.py  data_sources.py  documents.py  investment.py  mcp_admin.py  model_preferences.py  profile.py  rag.py  ranking_config.py  search.py  settings.py  tools.py
apps/config/: mcp_allowlist.yaml  port_config.py  settings.py
apps/core/: jwt.py
apps/data/audit/: audit_2026-02-02.csv  audit_2026-02-03.csv  audit_2026-02-04.csv  audit_2026-02-05.csv
apps/data/enrichment/: cache.py  hooks.py  pipeline.py  registry.py  status.py
apps/data/enrichment/enrichers/: air_quality.py
apps/db/: agent_repos.py  analytics_repos.py  database.py  document_repos.py  schemas.py  search_repos.py  user_repos.py
apps/mcp/: allowlist_validator.py  audit.py  base.py  context.py  rate_limiter.py  registry.py  retention.py  test_audit.py  test_base.py  test_result.py
apps/mcp/connectors/: test_web_scraper.py  web_scraper.py
apps/mcp/stubs/: base_stub.py  property_stub.py  search_stub.py
apps/mcp/test_stubs/: test_base_stub.py  test_echo_stub.py  test_web_scraper_stub.py
apps/mcp/testing/: network_guard.py  stub_registry.py  test_stub_registry.py
apps/models/: provider_factory.py  test_zai_provider.py
apps/models/providers/: __init__.py  zai.py
apps/resilience/: test_http_degradation.py
apps/services/: ab_testing_service.py  anomaly_service.py  citation_service.py  fx_rates.py  model_preference_service.py  personalization_service.py  ranking_config_service.py  user_activity_service.py
apps/tests/: conftest.py
apps/tests/e2e_backend/: test_auth_e2e.py  test_chat_e2e.py  test_data_lifecycle_e2e.py  test_health_e2e.py  test_search_e2e.py
apps/tests/integration/: test_port_allocation.py  test_profile_router.py  test_session_persistence.py  test_versioning.py
apps/tests/integration/api/: test_api_bulk_jobs_integration.py  test_api_cma_integration.py  test_api_collections_integration.py  test_api_investment_integration.py  test_api_leads_integration.py  test_api_mcp_admin_integration.py  test_api_profile_integration.py  test_api_user_activity_integration.py
apps/tests/integration/mcp/: test_web_scraper_agent_integration.py
apps/tests/performance/: test_load_concurrent.py
deploy/compose/: docker-compose.quick.yml  docker-compose.yml
deploy/docker/: Dockerfile.backend  Dockerfile.frontend
e2e/: auth-journey.spec.ts  search-journey.spec.ts
scripts/: env.ps1  openapi_diff.py  smoke_test.sh  start-docker.ps1  start-with-ports.py  start.ps1  stop.ps1
scripts/ci/: ci_parity.py  network_isolation_check.py
(+4 files in other folders)
